# LGdartsTournaments

./: .gitignore  README.md  pyproject.toml  requirements.txt
LGdartsTournaments/: settings.py  urls.py
LGdartsTournaments/middleware/: lgTimezoneMiddleware.py
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/static/js/: accounts.js
accounts/templates/accounts/: all_darts_list.html  (+9 more)
games/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
games/api/: urls.py  views.py
games/fixtures/: GameType.json
games/migrations/: 0001_initial.py  0002_remove_tournament_category_tournament_scheduling_and_more.py  0003_remove_tournament_scheduling_and_more.py  0004_game_round.py  0005_rename_number_of_games_tournament_number_of_rounds.py
scripts/: 501_.csv  BBScores.csv  import_initial_csv_to_db.py
src/: .gitignore  manage.py
src/LGdartsTournaments/: asgi.py  settings.py  wsgi.py
src/accounts/: views.py
src/tables/: backend.py  views.py
src/templates/: index.html  messages_display.html  navbar.html  robots.txt
src/tournaments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
static/css/: style.css
tables/: admin.py  backend.py  forms.py  models.py  urls.py  views.py
tables/migrations/: 0001_initial.py
templates/: base.html  footer.html  header.html  index.html  js.html  messages_display.html  navbar.html
tournaments/: admin.py  backend.py  urls.py  views.py
tournaments/migrations/: 0001_initial.py  0003_remove_tournament_scheduling_and_more.py  0004_game_round.py
(+47 files in other folders)
