[project]
name = "lgdartstournaments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=0.7",
    "django==4.2",
    "django-crispy-forms==1.14.0",
    "djangorestframework==3.16.0",
    "gunicorn>=26.0.0",
    "mysqlclient==2.1.1",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "tzdata==2023.3",
]
